@@ -1020,8 +1020,9 @@ operator|new
 name|Comparable
 index|[]
 block|{
-operator|new
 name|Long
+operator|.
+name|valueOf
 argument_list|(
 name|lastChange
 operator|.
@@ -1083,14 +1084,15 @@ operator|.
 name|getSourceTitle
 argument_list|()
 block|,
-comment|//new Integer(lastChange.getSource().ordinal()),
+comment|//Integer.valueOf(lastChange.getSource().ordinal()),
 name|lastChange
 operator|.
 name|getObjectTitle
 argument_list|()
 block|,
-operator|new
 name|Integer
+operator|.
+name|valueOf
 argument_list|(
 name|lastChange
 operator|.
